# CookieRain

./: .env.example  README.md  pyproject.toml
src/: entry.py
src/cookie_cloud_client/: client.py  config.py  core.py
